Added boiler plate test files